[wallet] fix can not see all coins when bottom nav is on
- fix can not see all coins when the bottom nav is on,
  by changing extra space for nav from `padding-bottom` to `margin-bottom`

--- a/apps/wallet/src/ui/styles/utils/index.scss
+++ b/apps/wallet/src/ui/styles/utils/index.scss
@@ -6,7 +6,7 @@ $main-space-var: v.use(v.$sizing-nav-height-placeholder);
 $main-extra-space: sizing.$main-bottom-space;
 
 @mixin main-extra-space-for-nav() {
-    padding-bottom: calc($main-space-var + $main-extra-space);
+    margin-bottom: calc($main-space-var + $main-extra-space);
 }
 
 @mixin escape-main-sides-space() {
